c/examples/writing-a-c-compiler-tests/tests/chapter_9/invalid_declarations/params_with_same_name.c
/* It's illegal for multiple parameters to a function to have the same name */
int foo(int a, int a) {
    return a;
}

int main(void) {
    return foo(1, 2);
}